--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,8 @@
 		= csrf_meta_tags
 	%body
 		%header#header
-			= link_to "Logout", destroy_user_session_path, :method => :delete	
-			= link_to "Dashboard", root_path
+			- if current_user
+				= link_to "Logout", destroy_user_session_path, :method => :delete	
+				= link_to "Dashboard", root_path
+				= link_to "Create a meeting", new_meeting_path
 		= yield
